did bunch of stuff: 1.changed the java version on pom.xml to 21 from 17 2. In the dockerfiles changed the jdk build env and jdk runtime env to amazoncorretto-21 jdk; 3. fixed auth-service a bit(added SecurityFilterChain so as to fix the default nature of spring-security->was throwing 401 because of default basic auth) 4.changed the container port of all services to 8080; 5. configured the debugger thru the dockerfile on auth-service 6. solved the issue of unable to run api-gateway image, now skipping    tests while mvn run.

--- a/api-gateway/src/main/resources/application.yml
+++ b/api-gateway/src/main/resources/application.yml
@@ -9,13 +9,13 @@ spring:
     oauth2:
       resourceserver:
         jwt:
-          secret-key: 5XW4T0T1y6nC9xX4rj2Q4ePQVwHZGk6rJTTZf84B4yM=
+          secret-key: ${JWT_SECRET}
 
   cloud:
     gateway:
       routes:
         - id: patient-service-route
-          uri: http://patient-service:5001
+          uri: http://patient-service:8080
           predicates:
             - Path=/api/patients/**
             - Method=GET
