--- a/auth-service/src/main/resources/application.properties
+++ b/auth-service/src/main/resources/application.properties
@@ -1,10 +1,9 @@
 spring.application.name=auth-service
-spring.datasource.url=jdbc:postgresql://db.sdcdjdhfdxcjxudninvq.supabase.co:5432/postgres
-spring.datasource.username=postgres
-spring.datasource.password=r5?T4FysiWvXv4u
-spring.datasource.driver-class-name=org.postgresql.Driver
+server.port=8080
+#spring.datasource.driver-class-name=org.postgresql.Driver
 
 # Optional: for JPA
-spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+#spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 # todo - remove this update because it will cause problem in production, should be none and flyway should be used for db migrations.
-spring.jpa.hibernate.ddl-auto=update
+#spring.jpa.hibernate.ddl-auto=update
+logging.level.root=info
